[package]
name = "esp-mbedtls-sys"
version = "0.1.0"
edition = "2021"
links = "mbedtls"
license = "MIT OR Apache-2.0"
rust-version = "1.84"

[build-dependencies]
anyhow      = "1.0.68"
bindgen     = "0.72.1"
env_logger  = "0.11.8"
log         = "0.4.17"
cmake       = "0.1.52"
fs_extra    = "1.3.0"
embuild     = "0.33"

[dependencies]
esp-alloc = { version = "0.9.0", features = ["compat"] }

# ESP-IDF: The mbedtls lib distributed with ESP-IDF is used
[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.36", default-features = false }

[features]
default = []
esp32 = ["esp-alloc/esp32"]
esp32c3 = ["esp-alloc/esp32c3"]
esp32c6 = ["esp-alloc/esp32c6"]
esp32s2 = ["esp-alloc/esp32s2"]
esp32s3 = ["esp-alloc/esp32s3"]
# All other platforms: mbedtls libs and bindings are created on the fly